--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,10 +73,11 @@ omit = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/project_name"]
+packages = ["src/foundrytools"]
 
 [tool.hatch.version]
 source = "uv-dynamic-versioning"
+
 
 [tool.mypy]
 disallow_untyped_defs = true
@@ -181,4 +182,5 @@ commands =
 
 [tool.uv-dynamic-versioning]
 strict = false
+style = "semver"
 vcs = "git"
