--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -55,14 +55,13 @@ jobs:
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
-        cache-dependency-glob: "uv.lock"
         enable-cache: false
         python-version: ${{ matrix.python-version }}
         version: "0.5.13"
 
     - name: Install library and dependencies
       run: |
-        uv sync --frozen
+        uv sync
 
     - name: Run Tox (Pytest + Coverage)
       run: |
@@ -95,7 +94,6 @@ jobs:
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
-        cache-dependency-glob: "uv.lock"
         enable-cache: true
 
     - name: Install Python
