--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -26,17 +26,16 @@ jobs:
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
-        cache-dependency-glob: "uv.lock"
         enable-cache: true
 
     - name: Install library and dependencies
       run: |
-        uv sync --frozen
+        uv sync
 
     - name: Lint with Ruff
       id: lint
       run: |
-        uv run --frozen ruff check --fix .
+        uv run ruff check --fix .
         echo "RUFF_SUCCESS=$([ $? -eq 0 ])" >> $GITHUB_OUTPUT
 
     - name: Create Pull Request
